# python-thetagang

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/thetagang/: trades.py
tests/: test_trades.py
