[tool.poetry]
name = "thetagang"
version = "0.1.0"
description = ""
authors = ["Major Hayden <major@mhtx.net>"]
readme = "README.md"
packages = [{include = "thetagang", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
bandit = "^1.7.4"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.2.0"
black = "^22.10.0"
pydocstyle = "^6.1.1"
responses = "^0.22.0"
pytest-xdist = "^3.0.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-n auto --cov-report term-missing --cov-report html --cov-report xml:cov.xml --cov-branch --cov=thetagang"
testpaths = [
    "tests"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]